force-app/main/default/objects/Purchase_Request_Stock__c/Purchase_Request_Stock__c.object-meta.xml
<CustomObject>
    <label>Purchase Request - Stock</label>
    <nameField>
        <displayFormat>PRS-{000000}</displayFormat>
        <label>Purchase Request - Stock No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Request - Stocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>