force-app/main/default/objects/Purchase_Request_Stock__c/fields/Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Reason__c</fullName>
    <label>Adjustment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defective</fullName>
            </value>
            <value>
                <fullName>Unaccounted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>