force-app/main/default/objects/Purchase_Request_Stock__c/fields/Purchase_Request__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Request</label>
    <referenceTo>Purchase_Request__c</referenceTo>
    <relationshipLabel>Purchase Request - Stocks</relationshipLabel>
    <relationshipName>Purchase_Request_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>