force-app/main/default/objects/Purchase_Request_Stock__c/fields/Purchase_Request_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Request_Quantity__c</fullName>
    <label>Purchase Request Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>