force-app/main/default/objects/Purchase_Request_Stock__c/fields/S_Number__c.field-meta.xml
<CustomField>
    <fullName>S_Number__c</fullName>
    <formula>Store_Item__r.S_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S Number</label>
    <type>Text</type>
</CustomField>