force-app/main/default/objects/Purchase_Request_Stock__c/fields/Stock_Reason__c.field-meta.xml
<CustomField>
    <fullName>Stock_Reason__c</fullName>
    <label>Stock Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested from Roma Base</fullName>
            </value>
            <value>
                <fullName>Requested by Store</fullName>
            </value>
            <value>
                <fullName>Stock Take</fullName>
            </value>
            <value>
                <fullName>Ordered Stock</fullName>
            </value>
            <value>
                <fullName>Baseline Stocks</fullName>
            </value>
            <value>
                <fullName>Defective</fullName>
            </value>
            <value>
                <fullName>Unaccounted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>