force-app/main/default/objects/Purchase_Request_Stock__c/fields/Store_Item__c.field-meta.xml
<CustomField>
    <fullName>Store_Item__c</fullName>
    <label>Store Item</label>
    <referenceTo>Store_Item__c</referenceTo>
    <relationshipLabel>Purchase Request - Stocks</relationshipLabel>
    <relationshipName>Purchase_Request_Stocks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>