force-app/main/default/objects/Purchase_Request_Stock__c/fields/Store_Unit__c.field-meta.xml
<CustomField>
    <fullName>Store_Unit__c</fullName>
    <formula>Store_Item__r.Store_Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store (Unit)</label>
    <type>Text</type>
</CustomField>