force-app/main/default/objects/Purchase_Request_Stock__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Store_Item__c</columns>
    <columns>Store_Unit__c</columns>
    <columns>S_Number__c</columns>
    <columns>Item_Name__c</columns>
    <columns>Quantity__c</columns>
    <columns>Stock_Reason__c</columns>
    <columns>Purchase_Request__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>